Update Logo & TM

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,7 +21,7 @@
             <div class="project-card">
                 <h3>1. NSYSU Dormitory Washing Machine IoT</h3>
                 <a href="iot/nsysu-dormitory-washing-machine-mainpage.html">
-                    <img src="static/img/dormitory-washing-machine.png" alt="Project Image">
+                    <img src="static\img\iot\nsysu\dormitory-washing-machine.png" alt="Project Image">
                 </a>
                 <div class="project-info">
                     <p>Utilizing Tuya smart plugs installed on washing machine sockets in school dormitories to mediate and monitor electrical signals with querying interfaces.</p>
