Restructure dir tree

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
     <div class="container">
         <!-- <canvas class="main-canvas"></canvas> -->
         <h1>👋 Welcome to Wei-Ying Huang (William)'s Website!</h1> <!-- 🎉 -->
