Restructure index and dir tree

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,41 +1,40 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
-    <link rel="stylesheet" href="css/app.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CodeYing</title>
+  <link rel="stylesheet" href="static/css/main.css">
+  <link rel="stylesheet" href="static/css/home.css">
 </head>
 <body>
-    <script src="js/app.js"></script>
-    <div class="container">
-        <!-- <canvas class="main-canvas"></canvas> -->
-        <h1>👋 Welcome to Wei-Ying Huang (William)'s Website!</h1> <!-- 🎉 -->
-        <p><ins>This website is still under construction.</ins></p>
-        <!-- <button class="clap-button" onclick="clap()">👏</button> -->
+  <script src="static/js/home.js"></script>
+  <div class="container">
+    <!-- <canvas class="main-canvas"></canvas> -->
+    <h1>👋 Welcome to Wei-Ying Huang (William)'s Website!</h1> <!-- 🎉 -->
+    <p><ins>This website is still under construction.</ins></p>
+    <!-- <button class="clap-button" onclick="clap()">👏</button> -->
 
-        <div class="project-container">
-            <h2>See Our Current Working Projects</h2>
-            <div class="project-card">
-                <h3>1. NSYSU Dormitory Washing Machine IoT</h3>
-                <a href="iot/nsysu-dormitory-washing-machine-mainpage.html">
-                    <img src="static\img\iot\nsysu\dormitory-washing-machine.png" alt="Project Image">
-                </a>
-                <div class="project-info">
-                    <p>Utilizing Tuya smart plugs installed on washing machine sockets in school dormitories to mediate and monitor electrical signals with querying interfaces.</p>
-                    <a href="iot/nsysu-dormitory-washing-machine-mainpage.html" target="_blank">Visit Site</a>
-                </div>
-            </div>
+    <div class="project-container">
+      <h2>See Our Current Working Projects</h2>
+      <div class="project-card">
+        <h3>1. NSYSU Dormitory Washing Machine IoT</h3>
+        <a href="iot/nsysu-dormitory-washing-machine/">
+          <img src="static\img\iot\nsysu\dormitory-washing-machine.png" alt="Project Image">
+        </a>
+        <div class="project-info">
+          <p>Utilizing Tuya smart plugs installed on washing machine sockets in school dormitories to mediate and monitor electrical signals with querying interfaces.</p>
+          <a href="iot/nsysu-dormitory-washing-machine/" target="_blank">Visit Site</a>
         </div>
-
+      </div>
     </div>
 
-    <footer>
-        <div class="contact-info">
-            <p>For inquiries, please contact the hoster via email: <a href="mailto:8334551will@gmail.com">8334551will@gmail.com</a></p>
-        </div>
-    </footer>
+  </div>
+
+  <footer>
+    <div class="contact-info">
+      <p>For inquiries, please contact the hoster via email: <a href="mailto:8334551will@gmail.com">8334551will@gmail.com</a></p>
+    </div>
+  </footer>
 </body>
 </html>
