--- a/test_area/test1.html
+++ b/test_area/test1.html
@@ -11,6 +11,7 @@
 
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="nav.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <title>Test1</title>
 </head>
 <body>
@@ -108,6 +109,16 @@
   </nav>
 
   <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h1>William Huang</h1>
+        <h2>Software Developer</h2>
+        <p>Building Innovative Solutions with Passion</p>
+        <a href="#portfolio" class="cta-button">查看我的作品集</a>
+      </div>
+      <div class="hero-3d-background"></div>
+    </section>
+
     <h1>Welcome to CodeYing</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam assumenda excepturi recusandae eius laborum laboriosam numquam expedita mollitia enim veritatis! Debitis tempora ea explicabo libero. Officia, quia ratione! Ad, fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et debitis corporis necessitatibus fuga vero totam sunt, maiores saepe itaque architecto? Consequatur molestias dolores molestiae distinctio voluptatem iusto nemo, aut excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, blanditiis, distinctio delectus ex perspiciatis, ratione provident libero asperiores numquam placeat nihil. Ullam saepe distinctio a dicta fugiat reiciendis voluptate! Repellendus.</p>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam assumenda excepturi recusandae eius laborum laboriosam numquam expedita mollitia enim veritatis! Debitis tempora ea explicabo libero. Officia, quia ratione! Ad, fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et debitis corporis necessitatibus fuga vero totam sunt, maiores saepe itaque architecto? Consequatur molestias dolores molestiae distinctio voluptatem iusto nemo, aut excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, blanditiis, distinctio delectus ex perspiciatis, ratione provident libero asperiores numquam placeat nihil. Ullam saepe distinctio a dicta fugiat reiciendis voluptate! Repellendus.</p>
