Update HeroSection Model

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
   <meta property="og:description" content="Explore tech projects, development tutorials, and innovation insights by William Huang.">
   <meta property="og:image" content="https://weiyinghuang.com/static/img/global/logo/CodeYing-Logo.png">
   <meta property="og:url" content="https://weiyinghuang.com">
+  <title>CodeYing | Tech Development & Innovation</title>
 
   <link rel="icon" href="https://weiyinghuang.com/static/img/global/favicon/CodeYing-Favicon.ico" type="image/x-icon">
   <!-- <link rel="stylesheet" href="https://weiyinghuang.com/static/css/main.css"> -->
@@ -17,12 +18,8 @@
   <link rel="stylesheet" href="static/css/globalComponents.css">
   <link rel="stylesheet" href="static/css/home/app.css">
 
-  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
-  <script src="https://unpkg.com/vue-router@4/dist/vue-router.global.prod.js"></script>
   <!-- <script src="https://weiyinghuang.com/static/js/main.js"></script> -->
   <script src="static/js/main.js"></script>
-  <script src="static/js/globalComponents.js"></script>
-  <title>CodeYing | Tech Development & Innovation</title>
 </head>
 <body id="app">
   <header>
@@ -31,7 +28,7 @@
 
   <main class="container">
     <router-view></router-view>
-    <herosection></herosection>
+    <herosection background-image="static/img/home/herobg.png"></herosection>
 
     <h1>Welcome to CodeYing</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam assumenda excepturi recusandae eius laborum laboriosam numquam expedita mollitia enim veritatis! Debitis tempora ea explicabo libero. Officia, quia ratione! Ad, fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et debitis corporis necessitatibus fuga vero totam sunt, maiores saepe itaque architecto? Consequatur molestias dolores molestiae distinctio voluptatem iusto nemo, aut excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, blanditiis, distinctio delectus ex perspiciatis, ratione provident libero asperiores numquam placeat nihil. Ullam saepe distinctio a dicta fugiat reiciendis voluptate! Repellendus.</p>
@@ -42,7 +39,11 @@
     <a href="mailto:8334551will@gmail.com">8334551will@gmail.com</a>
   </footer>
 
-  <!-- three.js -->
+  <!-- VueJs -->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+  <script src="https://unpkg.com/vue-router@4/dist/vue-router.global.prod.js"></script>
+
+  <!-- ThreeJs -->
   <script type="importmap">
     {
       "imports": {
@@ -51,9 +52,9 @@
       }
     }
   </script>
+
   <!-- <script src="https://weiyinghuang.com/....js"></script> -->
-  <script src="static/js/home/three.js" type="module"></script>
+  <script src="static/js/home/app.vue.js" type="module"></script>
   <script src="static/js/home/app.js"></script>
-  <script src="static/js/home/app.vue.js"></script>
 </body>
 </html>
