Address HomePage Style

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="https://weiyinghuang.com/static/img/global/favicon/CodeYing-Favicon.ico" type="image/x-icon">
   <!-- <link rel="stylesheet" href="https://weiyinghuang.com/static/css/main.css"> -->
   <link rel="stylesheet" href="static/css/main.css">
-  <link rel="stylesheet" href="static/css/globalComponents.css">
+  <link rel="stylesheet" href="static/css/GlobalComponents.css">
   <link rel="stylesheet" href="static/css/home/app.css">
 
   <!-- <script src="https://weiyinghuang.com/static/js/main.js"></script> -->
@@ -28,10 +28,11 @@
 
   <main class="container">
     <router-view></router-view>
-    <herosection background-image="static/img/home/herobg.png"></herosection>
+    <herosection background-image="https://weiyinghuang.com/static/img/home/herobg.png"></herosection>
 
     <h1>Welcome to CodeYing</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam assumenda excepturi recusandae eius laborum laboriosam numquam expedita mollitia enim veritatis! Debitis tempora ea explicabo libero. Officia, quia ratione! Ad, fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et debitis corporis necessitatibus fuga vero totam sunt, maiores saepe itaque architecto? Consequatur molestias dolores molestiae distinctio voluptatem iusto nemo, aut excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, blanditiis, distinctio delectus ex perspiciatis, ratione provident libero asperiores numquam placeat nihil. Ullam saepe distinctio a dicta fugiat reiciendis voluptate! Repellendus.</p>
+    <p><br/></p>
   </main>
 
   <footer>
