--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,6 +32,8 @@
       title="Welcome to"
       highlight-title="CodeYing"
       sub-title="Building Seamless Solutions<br/>Engaging User Interfaces and Software Applications"
+      intro-title="Know Me More"
+      intro-content="Hi, I'm <span style='color: #9C5FCA; font-weight: bold; text-decoration: underline;'>Wei-Ying Huang (William)</span>, a passionate developer with a deep interest in technology. Through this platform, I aim to share my journey, explore new concepts, and continue growing as a developer."
       background-image="https://weiyinghuang.com/static/img/home/herobg.png"
     ></herosection>
 
