--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="https://weiyinghuang.com/static/img/global/favicon/CodeYing-Favicon.ico" type="image/x-icon">
   <!-- <link rel="stylesheet" href="https://weiyinghuang.com/static/css/main.css"> -->
   <link rel="stylesheet" href="static/css/main.css">
-  <link rel="stylesheet" href="static/css/GlobalComponents.css">
+  <link rel="stylesheet" href="static/css/global-components.css">
   <link rel="stylesheet" href="static/css/home/app.css">
 
   <!-- <script src="https://weiyinghuang.com/static/js/main.js"></script> -->
@@ -23,19 +23,12 @@
 </head>
 <body id="app">
   <header>
-    <navbars></navbars>
+    <navs></navs>
   </header>
 
   <main class="container">
     <router-view></router-view>
-    <herosection 
-      title="Welcome to"
-      highlight-title="CodeYing"
-      sub-title="Building Seamless Solutions<br/>Engaging User Interfaces and Software Applications"
-      intro-title="Know Me More"
-      intro-content="Hi, I'm <span style='color: #9C5FCA; font-weight: bold; text-decoration: underline;'>Wei-Ying Huang (William)</span>, a passionate developer with a deep interest in technology. Through this platform, I aim to share my journey, explore new concepts, and continue growing as a developer."
-      background-image="https://weiyinghuang.com/static/img/home/herobg.png"
-    ></herosection>
+    <herosection></herosection>
 
     <h1>Welcome to CodeYing</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam assumenda excepturi recusandae eius laborum laboriosam numquam expedita mollitia enim veritatis! Debitis tempora ea explicabo libero. Officia, quia ratione! Ad, fugiat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et debitis corporis necessitatibus fuga vero totam sunt, maiores saepe itaque architecto? Consequatur molestias dolores molestiae distinctio voluptatem iusto nemo, aut excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, blanditiis, distinctio delectus ex perspiciatis, ratione provident libero asperiores numquam placeat nihil. Ullam saepe distinctio a dicta fugiat reiciendis voluptate! Repellendus.</p>
@@ -62,7 +55,7 @@
   </script>
 
   <!-- <script src="https://weiyinghuang.com/....js"></script> -->
+  <script src="static/js/home/app.js" type="module"></script>
   <script src="static/js/home/app.vue.js" type="module"></script>
-  <script src="static/js/home/app.js"></script>
 </body>
 </html>
