--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,19 +13,15 @@
   <title>CodeYing | Tech Development & Innovation</title>
 
   <link rel="icon" href="https://weiyinghuang.com/static/img/global/favicon/CodeYing-Favicon.ico" type="image/x-icon">
-  <!-- <link rel="stylesheet" href="https://weiyinghuang.com/static/css/main.css"> -->
+  <!-- <link rel="stylesheet" href="https://weiyinghuang.com/static/...css"> -->
   <link rel="stylesheet" href="static/css/main.css">
-  <link rel="stylesheet" href="static/css/global-components.css">
   <link rel="stylesheet" href="static/css/home/app.css">
-
-  <!-- <script src="https://weiyinghuang.com/static/js/main.js"></script> -->
-  <script src="static/js/main.js"></script>
 </head>
 <body id="app">
   <header>
     <navs></navs>
   </header>
-
+  
   <main class="container">
     <router-view></router-view>
     <herosection></herosection>
@@ -54,8 +50,8 @@
     }
   </script>
 
-  <!-- <script src="https://weiyinghuang.com/....js"></script> -->
-  <script src="static/js/home/app.js" type="module"></script>
+  <!-- <script src="https://weiyinghuang.com/static/....js"></script> -->
+  <script src="static/js/main.js"></script>
   <script src="static/js/home/app.vue.js" type="module"></script>
 </body>
 </html>
