--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,11 +24,8 @@
   
   <main class="container">
     <router-view></router-view>
-    <herosection></herosection>
-
-    <h1>Welcome to CodeYing</h1>
-    <tilt-card></tilt-card>
-    <p><br/></p>
+    <hero-section></hero-section>
+    <intro-section></intro-section>
   </main>
 
   <footer>
