--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,8 +24,10 @@
   
   <main class="container">
     <router-view></router-view>
+
     <hero-section></hero-section>
     <intro-section></intro-section>
+    <skill-section></skill-section>
   </main>
 
   <footer>
