Add CubeCanvas Component

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,6 +28,9 @@
     <hero-section></hero-section>
     <intro-section></intro-section>
     <skill-section></skill-section>
+    <cube-canvas 
+      style="margin-bottom: 100px"
+    ></cube-canvas>
   </main>
 
   <footer>
