Replace CubeCanvas with  StereoscopicCanvas Interface

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,9 +28,10 @@
     <hero-section></hero-section>
     <intro-section></intro-section>
     <skill-section></skill-section>
-    <cube-canvas 
+    <stereoscopic-canvas
+      :dimension="320"
       style="margin-bottom: 100px"
-    ></cube-canvas>
+    ></stereoscopic-canvas>
   </main>
 
   <footer>
