Update Temp BlogPage with EmailJs Function

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,8 @@
   </script>
 
   <!-- <script src="https://weiyinghuang.com/static/....js"></script> -->
-  <script src="static/js/main.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript" src="static/js/main.js"></script>
   <script src="static/js/home/app.vue.js" type="module"></script>
 </body>
 </html>
